# BE

./: .gitignore  .gitmessage.txt  Dockerfile  README.md  ai.py  alembic.ini  blacklist.py  docker-compose.yml  pyproject.toml  requirements.txt  requirments.txt  test.sh
.github/workflows/: checks.yml
alembic/: env.py
alembic/versions/: 06549a2a4ffa_modified_enum_column_type_2501081424.py  0b1202e0109c_merging_migration_branches.py  0f79f0694780_column_type_변경.py  2f9d23dc2603_datetime_오류로_인한_user_모델수정.py  326f43b178a6_user_db_changes.py  380bc1081281_create_diary_table.py  48204f176c5a_create_friend_table.py  628aca82e4db_merge_migration_bbranches.py  66bc696cdeec_user_table_update.py  84a065c4cc69_user_모델에_provider_추가.py  88d5f3d1a1ff_user_table_create.py  8c093daa8b71_users_테이블_생성.py  8e46d4333dd2_알림_테이블_생성.py  98a55a606049_user_diary_relationship.py  9ea12a8244d9_.py  be16a94af9cf_add_chat_room_id_to_messages.py  c27a5c1f6b51_initial.py  c6c74c5345e0_websocket.py  dc05ed59533c_create_ex_diary_table_2501080316.py  e14c81c06f61_craeate_diaries_table.py  e66b63eefd6d_create_diary_table.py
init-scripts/: create-test-db.sql
src/: __init__.py  main.py
src/config/: .env.local  __init__.py  cache.py  celery_config.py
src/config/database/: connection.py  connection_async.py
src/database/: connection.py
src/diary/: models.py  repository.py  reqository.py
src/diary/api/: router.py
src/diary/schema/: request.py  response.py
src/diary/service/: AIAnalysis.py  tasks.py
src/ex_diary/: models.py  repository.py
src/ex_diary/api/: router.py
src/ex_diary/schema/: response.py
src/ex_diary/service/: validate.py
src/friend/: models.py  repository.py
src/friend/api/: router.py
src/friend/schema/: request.py  response.py
src/notification/: models.py  repository.py
src/notification/api/: router.py
src/notification/schema/: request.py  response.py
src/notification/service/: websocket.py
src/user/: models.py  repository.py
src/user/api/: router.py
src/user/schema/: request.py  response.py
src/user/service/: authentication.py  cleanup.py  s3controller.py  smtp.py  tasks.py
src/websocket/: crud.py  models.py  repository.py  schemas.py  websocket.py
src/websocket/api/: auth.py  router.py
src/websockets/: database.py  models.py  router.py  schemas.py
tests/: conftest.py  test_ai.py  test_main.py  test_tasks.py
websockets/: models.py
