[tool.poetry]
name = "endofday"
version = "0.1.0"
description = ""
authors = ["mountain-kangkang <rngl10@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pytest = "^8.3.4"
psycopg2 = "^2.9.10"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

